--- a/housekeeping/docker/release/Dockerfile
+++ b/housekeeping/docker/release/Dockerfile
@@ -13,6 +13,6 @@ RUN mkdir /chain && \
 USER substrate
 
 COPY ./framenode /usr/local/bin/framenode
-COPY ./relayer /usr/local/bin/relayer
+COPY ./relayer.bin /usr/local/bin/relayer
 
 ENTRYPOINT ["framenode"]
