Proxy pallet initial

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -248,6 +248,9 @@ members = [
     "pallets/trustless-eth-bridge/leaf-provider/runtime-api",
     "pallets/trustless-eth-bridge/leaf-provider/rpc",
     "pallets/trustless-eth-bridge/types",
+    "pallets/trustless-eth-bridge/evm-bridge-proxy",
+    "pallets/trustless-eth-bridge/evm-bridge-proxy/rpc",
+    "pallets/trustless-eth-bridge/evm-bridge-proxy/runtime-api",
     "relayer",
     "relayer/substrate-gen",
     "relayer/ethereum-gen",
