--- a/ethereum-bridge-contracts/package.json
+++ b/ethereum-bridge-contracts/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@types/chai": "^4.2.22",
