--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,8 @@ members = [
     "pallets/xst",
     "pallets/price-tools",
     "node/",
+    "utils/parse",
+    "utils/wasm-builder",
 ]
 
 resolver = "2"
