--- a/ethereum-bridge-contracts/package.json
+++ b/ethereum-bridge-contracts/package.json
@@ -8,8 +8,8 @@
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@openzeppelin/contracts": "^4.3.2",
-    "@openzeppelin/test-helpers": "https://github.com/Snowfork/openzeppelin-test-helpers.git#3f9c4b8",
+    "@openzeppelin/contracts": "^4.7.2",
+    "@openzeppelin/test-helpers": "v0.5.12",
     "@polkadot/api": "^8.3.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
