Trustless evm bridge refactor (#722)
* [Refactor] Minor gas optimizations, comments, folder restructured, pkgs updated

* [Refactor] Added ISidechainApp interface

* [Refactor] register existing asset removed

* [Fix] Newline EOF

* [Fix] Review fixes

* [Refactor] ISidechainApp removed, IAssetRegister function renamed, new ifaces added

* [Refactor] Minor fixes and gas optimization

* [Update] Typechain added

* [Update] Solidity version bumped up to 0.8.15

* [Update] Scale library refactored

* [Update] Removed unused tests

* [Update] Minor changes in InboundChannel

* [Update] Review changes

* Minor fixes

* [Update] Slither green comments changes

* [Update] Not related to Reentrancy

Co-authored-by: Vladimir Stepanenko <vovac12@gmail.com>

--- a/ethereum-bridge-contracts/tsconfig.json
+++ b/ethereum-bridge-contracts/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "dist"
   },
   "include": [
-    "./deploy", "scripts/",
+    "./deploy", "./scripts", "./typechain"
   ],
   "files": ["./hardhat.config.ts"],
 }
