--- a/ethereum-bridge-contracts/package.json
+++ b/ethereum-bridge-contracts/package.json
@@ -9,7 +9,7 @@
     "@iarna/toml": "^2.2.5",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.7.2",
-    "@openzeppelin/test-helpers": "v0.5.12",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "@polkadot/api": "^8.3.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
@@ -38,6 +38,9 @@
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@typechain/web3-v1": "^6.0.1",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.1",
@@ -47,8 +50,9 @@
     "hardhat-gas-reporter": "^1.0.8",
     "solc-0.8": "npm:solc@^0.8.15",
     "solidity-coverage": "^0.7.21",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.4",
     "web3": "^1.7.5"
   }
 }
