--- a/relayer/ethereum-gen/src/bytes/ERC20App.abi.json
+++ b/relayer/ethereum-gen/src/bytes/ERC20App.abi.json
@@ -7,7 +7,7 @@
         "type": "address"
       },
       {
-        "internalType": "contract OutboundChannel",
+        "internalType": "address",
         "name": "_outbound",
         "type": "address"
       },
@@ -186,6 +186,19 @@
   {
     "inputs": [
       {
+        "internalType": "address",
+        "name": "token",
+        "type": "address"
+      }
+    ],
+    "name": "addTokenToWhitelist",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
         "internalType": "bytes32",
         "name": "role",
         "type": "bytes32"
@@ -285,38 +298,12 @@
     "name": "outbound",
     "outputs": [
       {
-        "internalType": "contract OutboundChannel",
+        "internalType": "contract IOutboundChannel",
         "name": "",
         "type": "address"
       }
     ],
     "stateMutability": "view",
-    "type": "function"
-  },
-  {
-    "inputs": [
-      {
-        "internalType": "address",
-        "name": "token",
-        "type": "address"
-      }
-    ],
-    "name": "registerAsset",
-    "outputs": [],
-    "stateMutability": "nonpayable",
-    "type": "function"
-  },
-  {
-    "inputs": [
-      {
-        "internalType": "address",
-        "name": "token",
-        "type": "address"
-      }
-    ],
-    "name": "registerExistingAsset",
-    "outputs": [],
-    "stateMutability": "nonpayable",
     "type": "function"
   },
   {
