--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -20,7 +20,7 @@ body:
     attributes:
       label: Steps to reproduce
       description: What are the steps to reproduce the bug ?
-      placeholder: >
+      placeholder: |
         (e.g.)
         1. Go to 
         2. Click on 
