--- a/.github/ISSUE_TEMPLATE/SPIKE_RESEARCH.yml
+++ b/.github/ISSUE_TEMPLATE/SPIKE_RESEARCH.yml
@@ -14,7 +14,10 @@ body:
     attributes:
       label: Problem statement
       description: What information is missing so that we need to research a subject further before continuing the work ? What is the problem statement ?
-      placeholder: We don''t understand how technology X works and so we cannot implement Y.
+      placeholder: |
+        We don''t understand how technology X works and so we cannot implement Y.
+        - What does Z do in technology X
+        - How does S interacts with M ?
     validations:
       required: true
    
