turn on dependabot and add npm package check (#745)
* turn on dependabot and add npm package check

* no PRs from dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,17 @@
 
 version: 2
 updates:
-  - package-ecosystem: "cargo" # See documentation for possible values
+  - package-ecosystem: "cargo"
     directory: "/" # Location of package manifests
+    target-branch: "develop"
+    schedule:
+      interval: "daily"
+      time: "06:00"
+    open-pull-requests-limit: 0
+
+  - package-ecosystem: "npm"
+    directory: "/ethereum-bridge-contracts"
+    target-branch: "develop"
     schedule:
       interval: "daily"
       time: "06:00"
