--- a/pallets/mock-liquidity-source/Cargo.toml
+++ b/pallets/mock-liquidity-source/Cargo.toml
@@ -30,6 +30,7 @@ traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library
 
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
+dex-manager = { path = "../dex-manager", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
 
