--- a/pallets/pswap-distribution/Cargo.toml
+++ b/pallets/pswap-distribution/Cargo.toml
@@ -34,6 +34,7 @@ traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library
 
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
+dex-manager = { path = "../dex-manager", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
