[PSS-1243]: Automate creation of documentation (#695)
* change Jenkinsfile

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix Jenkinsfile

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* added set +e parameter

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* Resolve comments

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix Jenkinsfile

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* added script

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change docs.sh permissions

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change image

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change script for alpine

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change image

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change to debian image

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* revert Jenkinsfile

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix comments

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix index.html

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix env-release Dockerfile

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix index.html

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix dockerfile

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix debug image

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>
Co-authored-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

--- a/housekeeping/docker/env-debug/Dockerfile
+++ b/housekeeping/docker/env-debug/Dockerfile
@@ -29,9 +29,10 @@ RUN add-apt-repository \
 # Install rust
 ENV RUST_VERSION=nightly-2021-03-11
 ENV GRCOV_VERSION=0.8.7
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --no-modify-path --default-toolchain ${RUST_VERSION} && \
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs  | sh -s -- -y --no-modify-path && \ 
     cargo install sccache && \
     cargo install grcov --version ${GRCOV_VERSION} && \
+    rustup default ${RUST_VERSION} && \
     rustup component add llvm-tools-preview && \
     rustup target add wasm32-unknown-unknown
 
