--- a/pallets/trustless-eth-bridge/evm-bridge-proxy/Cargo.toml
+++ b/pallets/trustless-eth-bridge/evm-bridge-proxy/Cargo.toml
@@ -17,6 +17,7 @@ sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polka
 sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 common = { path = "../../../common", default-features = false }
 bridge-types = { path = "../types", default-features = false }
 assets = { path = "../../assets", default-features = false }
