--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,30 +4,30 @@ updates:
     directory: "/"
     target-branch: "master"
     schedule:
-      interval: "daily"
-      time: "06:00"
+      interval: "weekly"
+      day: "sunday"
     open-pull-requests-limit: 0
 
   - package-ecosystem: "npm"
     directory: "/ethereum-bridge-contracts"
     target-branch: "master"
     schedule:
-      interval: "daily"
-      time: "06:00"
+      interval: "weekly"
+      day: "sunday"
     open-pull-requests-limit: 0
 
   - package-ecosystem: "gradle"
     directory: "/ethereum/smart-contracts-bootstrap"
     target-branch: "master"
     schedule:
-      interval: "daily"
-      time: "06:00"
+      interval: "weekly"
+      day: "sunday"
     open-pull-requests-limit: 0
 
   - package-ecosystem: "gradle"
     directory: "/ethereum/java-wrapper"
     target-branch: "master"
     schedule:
-      interval: "daily"
-      time: "06:00"
+      interval: "weekly"
+      day: "sunday"
     open-pull-requests-limit: 0
