--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch =
 beefy-gadget = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-updated" }
 beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-updated" }
 beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-updated" }
+substrate-wasm-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-updated" }
 
 #jsonrpc-core = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
 #jsonrpc-ws-server = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
@@ -202,6 +203,7 @@ pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch =
 beefy-gadget = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-updated" }
 beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-updated" }
 beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-updated" }
+substrate-wasm-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-updated" }
 
 pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.25" }
 
