--- a/relayer/ethereum-gen/src/bytes/SidechainApp.abi.json
+++ b/relayer/ethereum-gen/src/bytes/SidechainApp.abi.json
@@ -3,12 +3,12 @@
     "inputs": [
       {
         "internalType": "address",
-        "name": "_inbound",
+        "name": "inboundChannel",
         "type": "address"
       },
       {
         "internalType": "address",
-        "name": "_outbound",
+        "name": "outboundChannel",
         "type": "address"
       },
       {
@@ -297,17 +297,17 @@
     "inputs": [
       {
         "internalType": "address",
-        "name": "_token",
+        "name": "token",
         "type": "address"
       },
       {
         "internalType": "bytes32",
-        "name": "_recipient",
+        "name": "recipient",
         "type": "bytes32"
       },
       {
         "internalType": "uint256",
-        "name": "_amount",
+        "name": "amount",
         "type": "uint256"
       }
     ],
@@ -407,22 +407,22 @@
     "inputs": [
       {
         "internalType": "address",
-        "name": "_token",
+        "name": "token",
         "type": "address"
       },
       {
         "internalType": "bytes32",
-        "name": "_sender",
+        "name": "sender",
         "type": "bytes32"
       },
       {
         "internalType": "address",
-        "name": "_recipient",
+        "name": "recipient",
         "type": "address"
       },
       {
         "internalType": "uint256",
-        "name": "_amount",
+        "name": "amount",
         "type": "uint256"
       }
     ],
