--- a/ethereum-bridge-contracts/package.json
+++ b/ethereum-bridge-contracts/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.0.0",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.4",
-    "ethers": "^5.6.5",
+    "ethers": "^5.7.1",
     "find-config": "^1.0.0",
     "lodash": "^4.17.21",
     "merkletreejs": "^0.2.18",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.0",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
@@ -46,7 +46,8 @@
     "@types/node": "^16.10.1",
     "chai": "^4.3.4",
     "hardhat": "^2.9.3",
-    "hardhat-deploy": "^0.11.4",
+    "hardhat-deploy": "^0.11.18",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.8",
     "solc-0.8": "npm:solc@^0.8.15",
     "solidity-coverage": "^0.7.21",
