--- a/bridge-scripts/local_net_config.json
+++ b/bridge-scripts/local_net_config.json
@@ -8,7 +8,8 @@
             "constantinople_fork_block": 0,
             "muir_glacier_fork_block": 0,
             "london_fork_block": 0,
-            "arrow_glacier_fork_block": 0
+            "arrow_glacier_fork_block": 0,
+            "gray_glacier_fork_block": 0
         }
       }
     }
