--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -29,6 +29,7 @@ bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git"
 beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 sp-mmr-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 pallet-mmr = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+beefy-light-client = {git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet", default-features = false }
 
 ethereum-light-client = { path = "../pallets/trustless-eth-bridge/ethereum-light-client", default-features = false }
 bridge-channel = { path = "../pallets/trustless-eth-bridge/channel", default-features = false }
@@ -161,6 +162,7 @@ std = [
     "pallet-mmr/std",
     "sp-mmr-primitives/std",
     "beefy-primitives/std",
+    "beefy-light-client/std",
 
     "codec/std",
     "scale-info/std",
