--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -46,7 +46,7 @@ hex-literal = { version = "0.3.1" }
 log = "0.4.14"
 pallet-balances = { version = "3" }
 pallet-scheduler = { version = "3" }
-sp-io = { version = "3" }
+sp-io = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens" }
 
 assets = { path = "../assets" }
