--- a/pallets/permissions/Cargo.toml
+++ b/pallets/permissions/Cargo.toml
@@ -15,7 +15,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
-serde = { version = "1.0.101", optional = true, features = ["derive"] }
+serde = { version = "1.0.101", features = ["derive"], optional = true, default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
 
