--- a/pallets/referrals/Cargo.toml
+++ b/pallets/referrals/Cargo.toml
@@ -19,7 +19,7 @@ frame-benchmarking = { version = "3", default-features = false, optional = true 
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
 hex-literal = { version = "0.3.1", default-features = false, optional = true }
-serde = { version = "1.0.101", optional = true, features = ["derive"] }
+serde = { version = "1.0.101", features = ["derive"], optional = true, default-features = false }
 sp-std = { version = "3", default-features = false }
 traits = { version = "0.4", package = "orml-traits", default-features = false, optional = true }
 
