--- a/pallets/technical/Cargo.toml
+++ b/pallets/technical/Cargo.toml
@@ -20,7 +20,7 @@ frame-system = { version = "3", default-features = false }
 hex-literal = { version = "0.3.1", optional = true }
 orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
 pallet-balances = { version = "3", default-features = false }
-serde = { version = "1.0.101", optional = true, features = ["derive"] }
+serde = { version = "1.0.101", features = ["derive"], optional = true, default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
