--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -41,6 +41,7 @@ liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
 eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
 vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
+farming-rpc = { path = "../pallets/farming/rpc" }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
