XOR-XST double APY (#796)
Signed-off-by: Daniil Polyakov <arjentix@gmail.com>

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -47,6 +47,7 @@ dex-runtime-api = { path = "../pallets/dex-api/runtime-api", default-features = 
 eth-bridge = { path = "../pallets/eth-bridge", default-features = false }
 eth-bridge-runtime-api = { path = "../pallets/eth-bridge/runtime-api", default-features = false }
 farming = { path = "../pallets/farming", default-features = false }
+farming-runtime-api = { path = "../pallets/farming/runtime-api", default-features = false }
 faucet = { path = "../pallets/faucet", default-features = false, optional = true }
 iroha-migration = { path = "../pallets/iroha-migration", default-features = false }
 iroha-migration-runtime-api = { path = "../pallets/iroha-migration/runtime-api", default-features = false }
@@ -162,6 +163,7 @@ std = [
     "eth-bridge-runtime-api/std",
     "eth-bridge/std",
     "farming/std",
+    "farming-runtime-api/std",
     "faucet/std",
     "frame-executive/std",
     "frame-support/std",
