--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -44,6 +44,8 @@ liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
 eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
 vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
+beefy-light-client= { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet" }
+beefy-light-client-rpc= { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet" }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
