--- a/pallets/farming/rpc/Cargo.toml
+++ b/pallets/farming/rpc/Cargo.toml
@@ -9,16 +9,12 @@ repository = 'https://github.com/sora-xor/sora2-network'
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3" }
-jsonrpsee = { version = "0.14", features = ["server", "macros"] }
-sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
+sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 farming-runtime-api = { path = "../runtime-api" }
 
 [features]
 default = ["std"]
-std = [
-  "sp-api/std",
-  "sp-runtime/std",
-  "farming-runtime-api/std"
-]
+std = ["sp-api/std", "sp-runtime/std", "farming-runtime-api/std"]
