--- a/pallets/farming/runtime-api/Cargo.toml
+++ b/pallets/farming/runtime-api/Cargo.toml
@@ -8,14 +8,13 @@ homepage = 'https://sora.org'
 repository = 'https://github.com/sora-xor/sora2-network'
 
 [dependencies]
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-codec = { package = "parity-scale-codec", version = "3", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
+    "derive",
+] }
+scale-info = { version = "2", default-features = false, features = ["derive"] }
 
 [features]
 default = ["std"]
-std = [
-    "sp-api/std",
-    "sp-std/std",
-    "codec/std",
-]
+std = ["sp-api/std", "sp-std/std", "codec/std", "scale-info/std"]
