--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [dependencies]
 ethereum-gen = { path = "./ethereum-gen" }
 substrate-gen = { path = "./substrate-gen" }
+parachain-gen = { path = "./parachain-gen" }
+beefy-light-client = {git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet", default-features = false }
+bridge-common = {git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet", default-features = false }
 bridge-types = { path = "../pallets/trustless-eth-bridge/types" }
 ethers = { git = "https://github.com/sora-xor/ethers-rs", branch = "polkadot-v0.9.28", features = [
   "ws",
