--- a/relayer/parachain-gen/Cargo.toml
+++ b/relayer/parachain-gen/Cargo.toml
@@ -12,6 +12,7 @@ subxt = "0.24.0"
 codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
 scale-info = { version = "2", features = ["derive"] }
 beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
+bridge-common = {git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet", default-features = false }
 jsonrpsee = { version = "0.14", features = [
     "macros",
     "ws-client",
