--- a/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
@@ -33,14 +33,14 @@ technical = { path = "../../technical", default-features = false }
 
 ethabi = { version = "17.0.0", default-features = false }
 
-bridge-types = { path = "../types", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false }
 
-dispatch = { path = "../dispatch", default-features = false, optional = true }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false, optional = true }
 bridge-channel = { path = "../channel", default-features = false, optional = true }
 
 [dev-dependencies]
 bridge-channel = { path = "../channel", default-features = false }
-dispatch = { path = "../dispatch" }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
