--- a/pallets/trustless-eth-bridge/ethereum-light-client/Cargo.toml
+++ b/pallets/trustless-eth-bridge/ethereum-light-client/Cargo.toml
@@ -27,14 +27,14 @@ sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkad
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 
-bridge-types = { path = "../types", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false }
 
 ethash = { git = "https://github.com/sora-xor/ethash", branch = "polkadot-v0.9.28", default-features = false }
 
 common = { path = "../../../common", default-features = false }
 
 [dev-dependencies]
-bridge-types = { path = "../types", features = ["test"] }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", features = ["test"] }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 hex-literal = { version = "0.3.1" }
