--- a/pallets/trustless-eth-bridge/evm-bridge-proxy/Cargo.toml
+++ b/pallets/trustless-eth-bridge/evm-bridge-proxy/Cargo.toml
@@ -19,7 +19,7 @@ sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkado
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 common = { path = "../../../common", default-features = false }
-bridge-types = { path = "../types", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false }
 assets = { path = "../../assets", default-features = false }
 traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 
@@ -31,7 +31,7 @@ common = { path = "../../../common", features = ["test"] }
 technical = { path = "../../technical" }
 
 bridge-channel = { path = "../channel" }
-dispatch = { path = "../dispatch" }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets" }
 eth-app = { path = "../eth-app" }
 erc20-app = { path = "../erc20-app" }
 
