--- a/pallets/trustless-eth-bridge/leaf-provider/Cargo.toml
+++ b/pallets/trustless-eth-bridge/leaf-provider/Cargo.toml
@@ -30,7 +30,7 @@ pallet-beefy-mmr = { git = "https://github.com/paritytech/substrate.git", branch
 beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 
-bridge-types = { path = "../types", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false }
 ethabi = { version = "17.1.0", default-features = false }
 
 [dev-dependencies]
