--- a/pallets/trustless-eth-bridge/migration-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/migration-app/Cargo.toml
@@ -27,20 +27,20 @@ sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "po
 
 ethabi = { version = "17.0.0", default-features = false }
 
-bridge-types = { path = "../types", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false }
 
 assets = { path = "../../assets", default-features = false }
 traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 technical = { path = "../../technical", default-features = false }
 permissions = { path = "../../permissions", default-features = false }
 common = { path = "../../../common", default-features = false }
-dispatch = { path = "../dispatch", default-features = false, optional = true }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false, optional = true }
 
 eth-app = { path = "../eth-app", default-features = false }
 erc20-app = { path = "../erc20-app", default-features = false }
 
 [dev-dependencies]
-dispatch = { path = "../dispatch" }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
@@ -69,6 +69,8 @@ std = [
   "traits/std",
   "permissions/std",
   "common/std",
+  "eth-app/std",
+  "erc20-app/std",
 ]
 
 runtime-benchmarks = [
