--- a/relayer/substrate-gen/Cargo.toml
+++ b/relayer/substrate-gen/Cargo.toml
@@ -21,7 +21,7 @@ common = { path = "../../common" }
 subxt = "0.24.0"
 codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
 scale-info = { version = "2", features = ["derive"] }
-bridge-types = { path = "../../pallets/trustless-eth-bridge/types" }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets" }
 bridge-common = {git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet", default-features = false }
 beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 jsonrpsee = { version = "0.14", features = [
