--- a/pallets/trading-pair/Cargo.toml
+++ b/pallets/trading-pair/Cargo.toml
@@ -46,6 +46,7 @@ permissions = { path = "../permissions" }
 default = ['std']
 std = [
     'codec/std',
+    "common/std",
     "scale-info/std",
     'currencies/std',
     'frame-support/std',
