liquidity-proxy, ceres-liquidity-locker, demeter-farming-platform, dex-api, multicollateral-bonding-curve-pool, pool-xyk, pswap-distribution, vested-rewards, price-tools
Signed-off-by: Mikhail Tagirov <dev.mikhail.tagirov@gmail.com>

--- a/pallets/ceres-liquidity-locker/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/Cargo.toml
@@ -56,9 +56,10 @@ default = ['std']
 
 std = [
     "codec/std",
+    "dex-manager/std",
     "frame-support/std",
     "frame-system/std",
-    'serde',
+    "serde",
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
