--- a/pallets/iroha-migration/Cargo.toml
+++ b/pallets/iroha-migration/Cargo.toml
@@ -43,7 +43,9 @@ pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = 
 parity-util-mem = { version = "0.12.0", default-features = false, features = [
     "primitive-types",
 ] }
-sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
+sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false, features = [
+    "full_crypto",
+] }
 sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
@@ -59,11 +61,13 @@ default = ["std"]
 
 std = [
     "codec/std",
+    "eth-bridge/std",
     "scale-info/std",
     "frame-benchmarking/std",
     "frame-support/std",
     "frame-system/std",
     "pallet-multisig/std",
+    "referrals/std",
     "serde",
 ]
 
