ceres-governance-platform
Signed-off-by: Mikhail Tagirov <dev.mikhail.tagirov@gmail.com>

--- a/pallets/ceres-governance-platform/Cargo.toml
+++ b/pallets/ceres-governance-platform/Cargo.toml
@@ -56,9 +56,11 @@ default = ['std']
 
 std = [
     "codec/std",
+    "dex-manager/std",
     "frame-support/std",
     "frame-system/std",
-    'serde',
+    "pallet-timestamp/std",
+    "serde",
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
